--- a/questions-form.html
+++ b/questions-form.html
@@ -121,6 +121,11 @@
                         </ul>
                      </nav>
                   </div>
+				  <a href="https://universal-molding.com" class="header-logo" id="pdf-viewer-desktop" style="margin-right: 10px;">
+					<div class="logo-title" >
+						 <span class="text-primary">English</span>
+					</div>
+				  </a>
 				</nav>
 			</div>
 		</div>
