--- a/questions-form.html
+++ b/questions-form.html
@@ -89,9 +89,6 @@
 							   <li><a href="https://a.co/d/9CwTl9M" target="_blank"><i class="ri-book-2-line"></i>UM™ English Version</a></li>
 	                        </ul>
 	                     </li>
-						 <li>
-	                    	<a href="faq.html" class="iq-waves-effect"><span class="ripple rippleEffect"></span><i class="ri-record-circle-line iq-arrow-left"></i><span>English</span><i class="ri-arrow-right-s-line iq-arrow-right"></i></a>
-	                    </li>
 					</ul>
 				</nav>
 			</div>
@@ -113,6 +110,11 @@
 	                        </a>
 						</div>
 					</div>
+					<a href="https://universal-molding.com" class="header-logo" id="pdf-viewer-mobile" style="margin-right: 30px;">
+						<div class="logo-title" >
+							 <span class="text-primary">English</span>
+						</div>
+					 </a>
                   <div class="navbar-breadcrumb">
                      <h5 class="mb-0">Preguntas o Comentarios</h5>
                      <nav aria-label="breadcrumb">
