--- a/faq.html
+++ b/faq.html
@@ -244,7 +244,7 @@
                                 <div class="active-faq clearfix">
                                 <div class="container-fluid">
                                     <div class="row">
-                                        <div class="col-sm-12"><a class="accordion-title"><span> ¿Qué efecto tiene un cambio en la descompresión? </span> </a></div>
+                                        <div class="col-sm-12"><a class="accordion-title"><span> ¿Qué efecto tiene un cambio en la contrapresión? </span> </a></div>
                                     </div>
                                 </div>
                                 </div>
@@ -741,7 +741,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12 text-right">
-					Copyright <script>document.write(new Date().getFullYear())</script> Moldeo Universal™ Todos Los Derechos Reservados.
+					Copyright <script>document.write(new Date().getFullYear())</script> Héctor Dilán Todos Los Derechos Reservados.
 				</div>
 			</div>
 		</div>
