--- a/questions-form.html
+++ b/questions-form.html
@@ -192,7 +192,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12 text-right">
-					Copyright <script>document.write(new Date().getFullYear())</script> Moldeo Universal™ Todos Los Derechos Reservados.
+					Copyright <script>document.write(new Date().getFullYear())</script> Héctor Dilán Todos Los Derechos Reservados.
 				</div>
 			</div>
 		</div>
