--- a/faq.html
+++ b/faq.html
@@ -741,7 +741,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12 text-right">
-					Copyright <script>document.write(new Date().getFullYear())</script> Héctor Dilán Todos Los Derechos Reservados.
+					Copyright <script>document.write(new Date().getFullYear())</script> Héctor Dilán.
 				</div>
 			</div>
 		</div>
