--- a/questions-form.html
+++ b/questions-form.html
@@ -253,6 +253,7 @@
 	<script src="js/chart-custom.js"></script>
 	<!-- Custom JavaScript -->
 	<script src="js/custom.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 	<script src="js/script.js"></script>
 	
 </body>
